@@ -5,6 +5,8 @@ documents those changes that are of interest to users and admins.
 =========================
  -- Set correct user groups for task epilogs.
  -- Set SLURM_DIST_CYCLIC = 1 (needed for HP MPI, slurm.hp.env.patch).
+ -- Add more debugging for tracking slow slurmd job initiations
+    (slurm.hp.replaydebug.patch).
 
 * Changes in SLURM 1.0.16
 =========================
